# 3P93

a1/document/: doc.tex
assets/brick/: brick.mtl
assets/castle/: peach_castle.mtl
assets/halo/: spartan_armour_mkv_-_halo_reach.mtl
p1/document/: doc.tex
p2/code/: .gitignore  CMakeLists.txt  build.sh  default.nix  make_mp4.sh  make_submission.sh  make_webp.sh  nohup.out  run.sh  run_brick_1080.sh  run_brick_720.sh  run_halo_1080.sh  run_halo_720.sh
p2/code/assets/castle/: peach_castle.mtl
p2/code/assets/halo/: spartan_armour_mkv_-_halo_reach.mtl
p2/code/assets/head/: mariohead.mtl
p2/code/src/: frame_buffer.h  game.h  main.cpp  obj.h  renderer.h  resource_store.h  scene.h  texture.h  types.h  vec_math.h
p2/document/: doc.tex  references.bib
p3/code/: CMakeLists.txt  build_clang_gui.sh  build_gcc.sh  build_gcc_gui.sh  default.nix  run_brick_1080.sh
p3/code/src/: args.h  frame_buffer.h  game.h  glad.cpp  gui.h  iter.h  main.cpp  meow.cpp  obj.h  pixel.h  renderer.h  resource_store.h  scene.h  slice.h  texture.h  tui.h  vec_math.h
p3/code/src/impl/: tiny_obj_loader_impl.cpp
p3/code/src/renderer/: frame_buffer.h  pixel.h  renderer.h  scene.h
p3/code/src/resources/: obj.h  resource_store.h  texture.h
p3/code/src/ui/: gui.cpp  gui.h  tui.cpp  tui.h
p3/code/src/util/: iter.h  slice.h  types.h  vec_math.h
p3/document/: doc.tex
